# container_runway

./: .gitignore  CMakeLists.txt  INSTALL.sh  Makefile  NEXT_STEPS.md  PROBLEM.md  QUICKSTART.md  README.md  configure-docker.sh  main.cpp  package-lock.json  runtime
ctest/: CMakeLists.txt  runtime_gtest.cpp
docs/: runtime-architecture.md  runtime-functions.mmd
fix-scripts/: 00-stop-docker.sh  01-rebuild-debug.sh  02-enable-coredump.sh  03-test-runtime.sh  04-analyze-crash.sh  05-backup-code.sh  06-apply-memory-fix.sh  fix-memory-issue.patch
include/runtime/: config.h  console.h  filesystem.h  hooks.h  isolation.h  options.h  process.h  state.h
shim/: go.sum  main.go  service.go
src/runtime/: config.cpp  console.cpp  filesystem.cpp  hooks.cpp  isolation.cpp  options.cpp  process.cpp  state.cpp
test/: runtime_tests  runtime_tests.cpp
